--- a/zara/src/pages/Global.module.css
+++ b/zara/src/pages/Global.module.css
@@ -1,4 +1,4 @@
-*{
+/* *{
     padding: 0;
     margin:0;
     box-sizing: border-box;
@@ -6,8 +6,8 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
 }
-.button{
+button{
     background-color: black;
     color: white;
     padding: 3px 9px;
-}
+} */
