--- a/zara/src/pages/Home.module.css
+++ b/zara/src/pages/Home.module.css
@@ -22,6 +22,14 @@
     width:100%;
     height:90%;
     border: 1px solid gray;
+    transition: calc(1.0s);
+}
+.div_category  div img:hover{
+    /* width: 100%;
+    height:100%; */
+    /* transition: calc(1.0s); */
+    transform: scale(1.1);
+
 }
 .div_category p{
     font-weight: 600;
@@ -30,7 +38,7 @@
 
 .carousel{
     padding: 2%; 
-    background-color: black; 
+    background-color: gray; 
     color:white;
     height: 60%;
     margin: auto;
@@ -57,7 +65,7 @@
 
 .carousel1{
     padding: 2%;
-    background-color: black; 
+    background-color: gray; 
     color:white;
     height: 60%;
     margin: auto;
@@ -93,12 +101,22 @@
     border: 1px solid gray;
     height: 90%;
 }
+.div_category  div img{
+    /* width: 100%;
+    height:100%; */
+    transition: calc(1.0s);
+
+}
+.div_category  div img:hover{
+    /* width: 100%; */
+    transform: scale(1.1);
+}
 h2{
     text-align: left;
 }
 .carousel{
     padding: 2%; 
-    background-color: black; 
+    background-color: gray; 
     color:white;
     height: 60%;
     margin: auto;
@@ -125,7 +143,7 @@ h2{
 
 .carousel1{
     padding: 2%;
-    background-color: black; 
+    background-color: gray; 
     color:white;
     height: 60%;
     margin: auto;
