--- a/zara/src/components/style.css
+++ b/zara/src/components/style.css
@@ -43,8 +43,54 @@ body{
     justify-content: space-around;
     gap:2rem;
     padding-right: 2% ;
+    align-items: center; 
+}
+.cart_icon{
+    position:"absolute";
+    margin-top:"2%";
+    /* margin-right: "-5%"; */
+    background-color: red;
+    padding: 4px 6px 7px 6px;
+    align-items: center;
+    border-radius: 50%; 
+    color:white
 }
 /* *************** navbar page end ************************** */
+
+/* *************** footer page start ************************** */
+
+.bottom{
+    width:100%;
+    background-color: #8c8d94;
+    padding: 4% 0px;
+    margin-top: 2%;
+}
+.footer{
+    /* background-color: #8c8d94; */
+    color:white;
+    display: flex;
+    margin: auto;
+    width: 90%;
+    justify-content: space-around;
+}
+.footer ul li{
+    text-decoration:none;
+    list-style: none;
+}
+.footer ul li h3{
+    text-decoration: none;
+    color: white;
+    font-size: 15px;
+
+}
+.footer ul li a{
+    text-decoration: none;
+    color: white;
+    font-size: 12px;
+
+}
+/* *************** footer page end ************************** */
+
 
 /* *************** products page start ************************** */
 
@@ -54,7 +100,7 @@ body{
     margin: auto;
     width:95%;
    justify-content: space-between; 
-   border: 1px solid blue;
+   /* border: 1px solid blue; */
    margin-top: 2%; 
 }
 
@@ -62,13 +108,14 @@ body{
 {
     width:20%;
     border:1px solid black;
-    /* margin: auto; */
+    /* margin-top: 3%; */
+    /* margin: auto;  */
     
 }
 .product_view
 {
     width:75%;
-    border:1px solid red;
+    /* border:1px solid red; */
 
    
 }
@@ -83,8 +130,8 @@ body{
 .main_product div{
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     border-radius: 10% 10% 7% 7%;
-    height: 600px;
-    border: 1px solid black;
+    height: 500px;
+    border: 1px solid black; 
    
     /* margin: 10%; */
 }
@@ -93,10 +140,22 @@ body{
     border-radius: 10% 10% 0px 0px;
     border: 1px solid black;
     width:100%;
-    height:70%; 
+    height:60%; 
 }
 
+.pagination{
+    text-align: center;  
+    width:95%;
+    /* margin: auto; */
+    margin-top: 1%;
+    margin-left: 50%;
 
+}
+.pagination span{
+    margin-left: 1%;
+    margin-right: 1%;
+    /* padding: 2%; */
+}
 
 /* *************** product page end ************************** */
 
@@ -134,6 +193,80 @@ body{
 }
 
 /* *************** single product page end ************************** */
+
+
+
+/* *************** cart page start ************************** */
+.main_cart_div
+{
+    width: 95%;
+    margin: auto;
+    display: flex;
+    margin-top: 2%;
+    justify-content: space-between;
+
+}
+.cart_container{
+    width:75%;
+    /* margin-top: 2%; */
+    /* justify-content: space-between; */
+}
+.cart_container >div{
+    
+    display: grid;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    width:90%;
+    grid-template-columns: repeat(4,1fr);
+    gap:20px;
+    margin: 2% 0px; 
+    align-items: center;
+    padding: 0px 2%;
+}
+.cart_container div  img{
+    width:50%;
+    height:95%;
+}
+.total_div
+{
+    width:25%;
+    border: 1px solid black;
+    /* padding: 2%; */
+    text-align: center;
+    padding : 2% 0px;
+    padding-left: 3%;
+    /* align-items: center; */
+
+}
+.total_div div{
+   
+    width:90%;
+    text-align: center;
+    align-items: center; 
+    margin: 2% 0px;
+}
+
+
+
+/* *************** cart page end ************************** */
+
+
+.thank_you_div{
+    width:99vw;
+    height: 97vh;
+    background-image: url("https://media.giphy.com/media/26BRABnerqonwLHMc/giphy.gif");
+    text-align: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.thank_you_div h1{
+    font-size: 80px;
+    margin: auto;
+    padding-top: 13%;
+    color: #fc2779;
+}
+.thank_you_div h3{
+    font-size: 50px;
+}
 
 @media screen and (min-width: 480px) and (max-width:1024px) {
 
@@ -177,5 +310,124 @@ body{
     /* border:1px solid blue; */
 }
 /* *************** single product page end ************************** */
+
+
+/* *************** product page start ************************** */
+
+
+.product_view .main_product{
+    display: grid;
+    width:100%; 
+    grid-template-columns: repeat(2,1fr);
+    /* height: 200px; */
+    gap:15px;
+   
+ } 
+.main_product div{
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    border-radius: 10% 10% 7% 7%;
+    height: 500px;
+    border: 1px solid black; 
+   
+    /* margin: 10%; */
+}
+.main_product div img{
+    /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
+    border-radius: 10% 10% 0px 0px;
+    border: 1px solid black;
+    width:100%;
+    height:60%; 
+}
+
+.pagination{
+    text-align: center;  
+    width:95%;
+    /* margin: auto; */
+    margin-top: 1%;
+    margin-left: 50%;
+
+}
+
+/* *************** product page end ************************** */
+
+.bottom{
+    width:100%;
+    background-color: #8c8d94;
+    padding: 4% 0px;
+    margin-top: 2%;
+}
+.footer{
+    /* background-color: #8c8d94; */
+    color:white;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    width: 90%;
+    justify-content: space-around;
+}
+/* *************** cart page start ************************** */
+.main_cart_div
+{
+    width: 95%;
+    margin: auto;
+    /* display: flex; */
+    flex-direction: column;
+    margin-top: 2%;
+    justify-content: center;
+    /* justify-content: space-between; */
+    margin-bottom: 2%;
+    
+
+
+}
+.cart_container{
+    /* width:100%; */
+    margin: auto;
+    /* margin-top: 2%; */
+    /* justify-content: space-between; */
+}
+.cart_container >div{
+    
+    display: grid;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    width:90%;
+    grid-template-columns: repeat(4,1fr);
+    gap:20px;
+    margin: 2% 0px; 
+    align-items: center;
+    padding: 0px 2%;
+}
+.cart_container div  img{
+    width:50%;
+    height:100%;
+}
+.total_div
+{
+    width:50%;
+    border: 1px solid black;
+    /* padding: 2%; */
+    text-align: center;
+    padding : 2% 0px;
+    padding-left: 3%;
+    margin-top: 5%;
+    margin: auto; 
+     align-items: center; 
+     justify-content: center;
+     align-content: center;
+
+}
+.total_div div{
+   
+    width:90%;
+    text-align: center;
+    align-items: center; 
+    margin: 2% 0px;
+}
+
+
+
+
+
+/* *************** cart page end ************************** */
 
 }
